--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(download)
 export(drop_temp)
 export(ds_register)
 export(get_time)
+export(read_s3_st)
 export(s3copy)
 export(s3createfs)
 export(s3file)
