Ajoute s3exists et s3download

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(ds_register)
 export(get_time)
 export(read_s3_st)
 export(s3createfs)
+export(s3download)
+export(s3exists)
 export(s3file)
 export(s3path)
 export(txevol)
