--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,18 @@
 Package: cham
 Type: Package fonctions utiles INSEE
 Title: Fonctions utiles
-Version: 0.1.7.6
+Version: 0.2
 Author: Philippe Chataignon
 Maintainer: Philippe Chataignon <philippe.chataignon@insee.fr>
-Description: Fonctions utiles
+Description: Fonctions utiles 
 License: GPL-2
 Encoding: UTF-8
 RoxygenNote: 7.3.2
 Roxygen: list(markdown = TRUE)
 Imports: 
   data.table,
+  dplyr,
   DBI,
   duckdb,
-  arrow
+  arrow,
+  glue
