--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,8 @@
 export(download)
 export(drop_temp)
 export(ds_register)
+export(get_conn)
+export(get_rp21)
 export(get_time)
 export(read_s3_st)
 export(s3createfs)
