Ajoute get_ds et get_tbl

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,12 @@ export(download)
 export(drop_temp)
 export(ds_register)
 export(get_conn)
+export(get_ds)
 export(get_rp21)
+export(get_tbl)
 export(get_time)
 export(read_s3_st)
+export(rp_edl_files)
 export(s3createfs)
 export(s3download)
 export(s3exists)
