Ajoute fonctions accès EAR

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,9 @@
 export(download)
 export(drop_temp)
 export(ds_register)
+export(ear_ext)
+export(ear_files)
+export(extend)
 export(get_conn)
 export(get_ds)
 export(get_rp21)
@@ -10,6 +13,7 @@ export(get_tbl)
 export(get_time)
 export(read_s3_st)
 export(rp_edl_files)
+export(rp_ext)
 export(s3createfs)
 export(s3download)
 export(s3exists)
