Ajoute tbl_s3 et tbl_expl

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,8 @@ export(s3download)
 export(s3exists)
 export(s3file)
 export(s3path)
+export(tbl_expl)
+export(tbl_s3)
 export(txevol)
 export(txevol_solde)
 export(write_parquet)
