Ajoute write_duckdb_parquet

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,5 +23,6 @@ export(tbl_expl)
 export(tbl_s3)
 export(txevol)
 export(txevol_solde)
+export(write_duckdb_parquet)
 export(write_parquet)
 export(write_s3_st)
