Remet les rename_with

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,9 +17,12 @@ export(rp_ext)
 export(s3createfs)
 export(s3download)
 export(s3exists)
+export(s3expl)
 export(s3file)
 export(s3path)
+export(s3perso)
 export(tbl_expl)
+export(tbl_pqt)
 export(tbl_s3)
 export(txevol)
 export(txevol_solde)
