Ajoute tbl_list

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(s3file)
 export(s3path)
 export(s3perso)
 export(tbl_expl)
+export(tbl_list)
 export(tbl_pqt)
 export(tbl_s3)
 export(txevol)
