--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,7 @@ export(ear_files)
 export(extend)
 export(get_conn)
 export(get_ds)
-export(get_rp21)
+export(get_rp)
 export(get_tbl)
 export(get_time)
 export(read_s3_st)
