--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: cham
 Type: Package fonctions utiles INSEE
 Title: Fonctions utiles
-Version: 0.2.8.4
+Version: 0.2.9
 Author: Philippe Chataignon
 Maintainer: Philippe Chataignon <philippe.chataignon@insee.fr>
 Description: Fonctions utiles 
@@ -15,4 +15,6 @@ Imports:
   DBI,
   duckdb,
   arrow,
-  glue
+  glue,
+  httr,
+  zip
