--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(get_access_url)
 export(get_conn)
 export(get_ds)
 export(get_rp)
+export(get_site)
 export(get_tbl)
 export(get_time)
 export(read_s3_st)
