Ajoute variables s3 et site

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,8 +17,11 @@ export(rp_ext)
 export(s3createfs)
 export(s3download)
 export(s3exists)
+export(s3expl)
 export(s3file)
 export(s3path)
+export(s3perso)
+export(site)
 export(tbl_list)
 export(tbl_pqt)
 export(txevol)
