--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(get_conn)
 export(get_rp)
 export(get_site)
 export(get_time)
+export(lapplyn)
 export(read_s3_st)
 export(rp_ext)
 export(s3createfs)
