Ajoute refresh_secret

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(get_site)
 export(get_time)
 export(lapplyn)
 export(read_s3_st)
+export(refresh_secret)
 export(rp_ext)
 export(s3createfs)
 export(s3download)
