Ajoute get_rpdb pour le rp sous duckdb

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(extend)
 export(get_access_url)
 export(get_conn)
 export(get_rp)
+export(get_rpdb)
 export(get_site)
 export(get_time)
 export(lapplyn)
