Ajoute get_eardb

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(ear_files)
 export(extend)
 export(get_access_url)
 export(get_conn)
+export(get_eardb)
 export(get_rp)
 export(get_rpdb)
 export(get_site)
