--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,5 +31,6 @@ export(tirage)
 export(txevol)
 export(txevol_solde)
 export(write_duckdb_parquet)
+export(write_duckdb_parquet_raw)
 export(write_parquet)
 export(write_s3_st)
