Ajoute fonction ecart

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(downzip)
 export(drop_temp)
 export(ear_ext)
 export(ear_files)
+export(ecart)
 export(extend)
 export(get_access_url)
 export(get_conn)
