--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,11 +11,13 @@ export(extend)
 export(get_access_url)
 export(get_conn)
 export(get_eardb)
+export(get_h3map)
 export(get_rp)
 export(get_rpdb)
 export(get_site)
 export(get_time)
 export(lapplyn)
+export(read_geoparquet)
 export(read_s3_st)
 export(refresh_secret)
 export(rp_ext)
@@ -26,6 +28,7 @@ export(s3expl)
 export(s3file)
 export(s3perso)
 export(site)
+export(tbl2sf)
 export(tbl_list)
 export(tbl_pqt)
 export(tirage)
@@ -33,5 +36,6 @@ export(txevol)
 export(txevol_solde)
 export(write_duckdb_parquet)
 export(write_duckdb_parquet_raw)
+export(write_geoparquet)
 export(write_parquet)
 export(write_s3_st)
