Ajoute fonctions accès : geo, work, gen et ref

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ export(ear_ext)
 export(ear_files)
 export(ecart)
 export(extend)
+export(gen)
+export(geo)
 export(get_access_url)
 export(get_conn)
 export(get_eardb)
@@ -19,6 +21,7 @@ export(get_time)
 export(lapplyn)
 export(read_geoparquet)
 export(read_s3_st)
+export(ref)
 export(refresh_secret)
 export(rp_ext)
 export(s3createfs)
@@ -34,6 +37,7 @@ export(tbl_pqt)
 export(tirage)
 export(txevol)
 export(txevol_solde)
+export(work)
 export(write_duckdb_parquet)
 export(write_duckdb_parquet_raw)
 export(write_geoparquet)
