Ajoute fonction get_geometadata

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(get_access_url)
 export(get_conn)
 export(get_ear)
 export(get_eardb)
+export(get_geometadata)
 export(get_h3map)
 export(get_rp)
 export(get_rpdb)
