--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,11 +13,9 @@ export(geo)
 export(get_access_url)
 export(get_conn)
 export(get_ear)
-export(get_eardb)
 export(get_geometadata)
 export(get_h3map)
 export(get_rp)
-export(get_rpdb)
 export(get_site)
 export(get_time)
 export(lapplyn)
@@ -34,6 +32,7 @@ export(s3file)
 export(s3perso)
 export(site)
 export(tbl2sf)
+export(tbl_duckdb)
 export(tbl_list)
 export(tbl_pqt)
 export(tirage)
