--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(s3file)
 export(s3perso)
 export(site)
 export(tbl2sf)
+export(tbl_db)
 export(tbl_duckdb)
 export(tbl_list)
 export(tbl_pqt)
