Revoit gestion des extensions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(get_h3map)
 export(get_rp)
 export(get_site)
 export(get_time)
+export(install_extensions)
 export(lapplyn)
 export(read_geoparquet)
 export(read_s3_st)
