Ajoute fonctions Postgres

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 export(arrondi_entier)
 export(attach_db)
+export(db_param)
+export(disconnect_pg)
 export(download)
 export(download_archive)
 export(drop_temp)
@@ -20,6 +22,9 @@ export(get_site)
 export(get_time)
 export(install_extensions)
 export(lapplyn)
+export(list_db)
+export(pg_attach)
+export(pg_connect)
 export(read_geoparquet)
 export(read_s3_st)
 export(ref)
