Ajoute count_bits et group_num

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(arrondi_entier)
 export(attach_db)
+export(count_bits)
 export(db_param)
 export(disconnect_pg)
 export(download)
@@ -20,6 +21,7 @@ export(get_h3map)
 export(get_rp)
 export(get_site)
 export(get_time)
+export(group_num)
 export(install_extensions)
 export(lapplyn)
 export(list_db)
