Ajoute set_conn et unset_conn

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ export(s3exists)
 export(s3expl)
 export(s3file)
 export(s3perso)
+export(set_conn)
 export(site)
 export(tbl2sf)
 export(tbl_db)
@@ -47,6 +48,7 @@ export(tbl_pqt)
 export(tirage)
 export(txevol)
 export(txevol_solde)
+export(unset_conn)
 export(work)
 export(write_duckdb_parquet)
 export(write_duckdb_parquet_raw)
