Ajoute classe duckdb_conn

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(disconnect_pg)
 export(download)
 export(download_archive)
 export(drop_temp)
+export(duckdb_conn)
 export(ear_ext)
 export(ecart)
 export(extend)
@@ -59,3 +60,4 @@ export(write_duckdb_parquet_raw)
 export(write_geoparquet)
 export(write_parquet)
 export(write_s3_st)
+importFrom(R6,R6Class)
