--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(as_bool)
 export(as_int)
 export(attach_db)
 export(count_bits)
+export(db)
 export(db_param)
 export(disconnect_pg)
 export(download)
