Ajoute create_view

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(as_int)
 export(attach_db)
 export(count_bits)
 export(create_cube)
+export(create_view)
 export(db_param)
 export(disconnect_pg)
 export(download)
