Ajoute tempname et create_cube utilise view temporaire

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,7 @@ export(tbl_db)
 export(tbl_duckdb)
 export(tbl_list)
 export(tbl_pqt)
+export(tempname)
 export(tirage)
 export(txevol)
 export(txevol_solde)
