Ajoute write_df_parquet

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,9 +56,9 @@ export(tirage)
 export(txevol)
 export(txevol_solde)
 export(work)
+export(write_df_parquet)
 export(write_duckdb_parquet)
 export(write_duckdb_parquet_raw)
 export(write_geoparquet)
-export(write_parquet)
 export(write_s3_st)
 importFrom(R6,R6Class)
