--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(drop_temp)
 export(duckdb_conn)
 export(ear_ext)
 export(ecart)
+export(expl)
 export(extend)
 export(gen)
 export(geo)
@@ -32,21 +33,16 @@ export(group_num)
 export(install_extensions)
 export(lapplyn)
 export(list_db)
+export(perso)
 export(pg_attach)
 export(pg_connect)
 export(read_geoparquet)
-export(read_s3_st)
 export(ref)
 export(refresh_secret)
 export(rp_ext)
-export(s3createfs)
-export(s3download)
-export(s3exists)
 export(s3expl)
-export(s3file)
 export(s3perso)
 export(site)
-export(store)
 export(tbl2sf)
 export(tbl_db)
 export(tbl_duckdb)
@@ -61,5 +57,4 @@ export(write_df_parquet)
 export(write_duckdb_parquet)
 export(write_duckdb_parquet_raw)
 export(write_geoparquet)
-export(write_s3_st)
 importFrom(R6,R6Class)
